--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
-  - {name: 波兰-851.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇺🇸 美国-5.89MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-6.39MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.39MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 38.121.43.71, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇭🇰 香港-4.37MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
-      - 波兰-851.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
