--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-2.04MB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-1.94MB/s(Youtube:不良林), server: 213.183.59.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇳🇱 荷兰-3.26MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 波兰-2.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.26MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
