--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.89MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.55MB/s(Youtube:不良林), server: 38.121.43.71, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林), server: 213.183.53.208, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇳🇱 荷兰-229.9KB/s(Youtube:不良林), server: 213.183.51.171, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇨🇳 中国-7.50MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.20MB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 波兰-3.10MB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
   - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.55MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-229.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.20MB/s(Youtube:不良林)
+      - 波兰-3.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
